novas fature adicionadas

--- a/frontend/homePage/index.html
+++ b/frontend/homePage/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Navbar Madian</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/frontend/homePage/style.css" />
+    <link rel="stylesheet" href="../tempStyle.css">
+    <script src="/frontend/homePage/mobile-navbar.js" defer></script>
   </head>
 
   <body>
@@ -21,12 +23,13 @@
           <li><a href="#">Início</a></li>
           <li><a href="#">Login/Cadastro</a></li>
           <li><a href="#">Serviços</a></li>
-          <li><a href="#">Contato</a></li>
+          <li><a href="/frontend/produtos/index.html">Comprar</a></li>
+          <li><a href="/frontend/pdv/constApp.html">PDV</a></li>
         </ul>
       </nav>
     </header>
     <main></main>
    
-    <script src="mobile-navbar.js"></script>
+    
   </body>
 </html>
